--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "simple-progress-webpack-plugin": "^1.1.2",
+    "style-resources-loader": "^1.3.3",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
-    "vue-property-decorator": "^8.4.2",
-    "simple-progress-webpack-plugin": "^1.1.2"
+    "vue-cli-plugin-style-resources-loader": "~0.1.4",
+    "vue-property-decorator": "^8.4.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.33.0",
@@ -26,9 +28,10 @@
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
-    "prettier": "^1.19.1",
     "node-sass": "^4.12.0",
+    "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
+    "style-resources-loader": "^1.3.2",
     "typescript": "~3.9.3",
     "vue-template-compiler": "^2.6.11"
   }
