--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.12.0",
+    "postcss-px-to-viewport": "^1.1.1",
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
     "style-resources-loader": "^1.3.2",
