--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-cli-plugin-style-resources-loader": "~0.1.4",
-    "vue-property-decorator": "^8.4.2"
+    "vue-property-decorator": "^8.4.2",
+    "vue-router": "^3.3.4"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.33.0",
