--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "vue-class-component": "^7.2.3",
     "vue-cli-plugin-style-resources-loader": "~0.1.4",
     "vue-property-decorator": "^8.4.2",
-    "vue-router": "^3.3.4"
+    "vue-router": "^3.3.4",
+    "vuex": "^3.5.1",
+    "vuex-class": "^0.3.2",
+    "vuex-module-decorators": "^0.17.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.33.0",
