--- a/.editorconfig
+++ b/.editorconfig
@@ -1,16 +1,16 @@
 # http://editorconfig.org
 
-# top-most EditorConfig file
+# top-most EditorConfig file 表示是最顶层的配置文件，发现设为true时，才会停止查找.editorconfig文件
 root = true
 
-# Unix-style newlines with a newline ending every file
+# Unix-style newlines with a newline ending every file 对于所有的文件  始终在文件末尾插入一个新行
 [*]
 charset = utf-8
 end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-# Indentation override for js(x), ts(x) and vue files
+# Indentation override for js(x), ts(x) and vue files  控制js,jsx,ts,tsx,vue文件类型的缩进大小
 [*.{js,jsx,ts,tsx,vue}]
 indent_size = 2
 indent_style = space
