--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "konva": "^7.0.1",
     "simple-progress-webpack-plugin": "^1.1.2",
     "style-resources-loader": "^1.3.3",
+    "vant": "^2.10.12",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-cli-plugin-style-resources-loader": "~0.1.4",
+    "vue-konva": "^2.1.3",
     "vue-property-decorator": "^8.4.2",
     "vue-router": "^3.3.4",
     "vuex": "^3.5.1",
